# labqcpro

./: .gitignore  ADVANCED_FAULT_DETECTION_GUIDE.md  CHANGELOG.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  DUAL_MONITOR_FIX_SUMMARY.md  FIX_SUCCESS_REPORT.md  GITHUB_SETUP.md  LAB_QC_README.md  LICENSE  README.md  REALTIME_MONITORING_GUIDE.md  REALTIME_QUICK_START.md  REPOSITORY_SUMMARY.md  advanced_fault_detection.py  check_repository_ready.py  lab_qc_analysis.py  lab_qc_demo.py  pyproject.toml  quick_reference.py  quickstart.sh  realtime_qc_desktop.py  realtime_qc_monitor.py  requirements.txt  start_realtime_monitor.py  test_dual_monitor.py  validate_fix.py
docs/: API_REFERENCE.md  TECHNICAL_REPORT.md  USER_GUIDE.md
results/: cusum_analysis.csv  cusum_violations.csv  ewma_analysis.csv  ewma_violations.csv  qc_summary_report.csv  westgard_violations_creatinine.csv  westgard_violations_urea.csv
