[project]
name = "qc-sigma-abnormality-detection"
version = "0.1.0"
description = "Laboratory Quality Control and Statistical Analysis for Creatinine and Urea"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "plotly>=5.14.0",
    "dash>=2.9.0",
]
